--- a/app/src/main/res/layout/activity_view_logs.xml
+++ b/app/src/main/res/layout/activity_view_logs.xml
@@ -33,8 +33,7 @@
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+        app:layout_constraintRight_toRightOf="parent" />
 
     <!-- Export Button - POSITIONED PROPERLY -->
     <Button
